[package]
name = "TUT_01_blinkled"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
This is the RusPiRo Tutorial crate to show case the usage ogf GPIO to blink connected LED's
"""
license = "Apache-2.0"
readme = "README.md"
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { version = "0.3", features = ["ruspiro_pi3"] }
ruspiro-allocator = { version = "0.4" }
ruspiro-gpio = { version = "0.4", features = ["ruspiro_pi3"] }
ruspiro-timer = { version = "0.4", features = ["ruspiro_pi3"] }

