[package]
name = "TUT_01_blinkled"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
This is the RusPiRo Tutorial crate to show case the usage of GPIO to blink connected LEDs
"""
license = "Apache-2.0"
readme = "README.md"
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-allocator = "~0.4.5"
ruspiro-boot = { version = "~0.5.3", features = [ "multicore" ] }
ruspiro-gpio = "~0.4.2"
ruspiro-mmu = "~0.1.1"
ruspiro-timer = "~0.5.1"

[features]
ruspiro_pi3 = [
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3"
]
