[package]
name = "02_CONSOLE"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.0.1"
description = """
RusPiRo Tutorial: Console output using the miniUART of the Raspberry Pi
"""
license = "MIT"
repository = "https://github.com/RusPiRo/ruspiro-tutorials/"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "tutorial"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel7"        # name of the binary to build
path = "src/kernel.rs"  # main source file to build the binary from

[dependencies.ruspiro-sdk]
version = "0.2"
features = ["ruspiro_pi3", "with_console", "with_uart"]
