[package]
name = "TUT_02_console"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
This is the RusPiRo Tutorial crate to show case the usage of console output
"""
license = "Apache-2.0"
readme = "README.md"
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { version = "~0.5.3", features = [ "multicore" ] }
ruspiro-allocator = "~0.4.5"
ruspiro-console = "~0.5.3"
ruspiro-uart = "~0.4.0"
ruspiro-mmu = "~0.1.1"


[features]
ruspiro_pi3 = [
    "ruspiro-uart/ruspiro_pi3"
]

[patch.crates-io]
#ruspiro-boot = { path = "../../ruspiro-boot" }
#ruspiro-gpio = { git = "https://github.com/RusPiRo/ruspiro-gpio.git", branch = "development" }
ruspiro-uart = { path = "../../ruspiro-uart" }