[package]
name = "TUT_03_interrupt"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
This tutorial demonstrates the usage of interrupt handler and how thei are implemented.
"""
license = "Apache-2.0"
readme = "README.md"
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { version = "0.3", features = [ "singlecore" ] }
ruspiro-allocator = "0.4"
ruspiro-interrupt = "0.3"
ruspiro-register = "0.4"

[features]
ruspiro_pi3 = [
    "ruspiro-boot/ruspiro_pi3",
    "ruspiro-interrupt/ruspiro_pi3"
]
