[package]
name = "TUT_03_interrupt"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
This tutorial demonstrates the usage of interrupt handler and how thei are implemented.
"""
license = "Apache-2.0"
readme = "README.md"
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = "~0.5.3"
ruspiro-allocator = "~0.4.5"
ruspiro-console = "~0.5.3"
ruspiro-interrupt = "~0.4.3"
ruspiro-mmio-register = "~0.1.3"
ruspiro-uart = "~0.4.0"
ruspiro-mmu = "~0.1.1"

[features]
ruspiro_pi3 = [
    "ruspiro-interrupt/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3"
]
