[package]
name = "TUT_04_i2c"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.0.1" # remember to update html_root_url
description = """
This tutorial demonstrates how to use the I2C peripheral astraction to communicate with a custom
device attached to this bus.
"""
license = "Apache-2.0"
readme = "README.md"
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
ruspiro-boot = { version = "0.3", features = [ "singlecore" ] }
ruspiro-allocator = "0.4"
ruspiro-i2c = "0.3"

[features]
ruspiro_pi3 = [
    "ruspiro-boot/ruspiro_pi3",
    "ruspiro-i2c/ruspiro_pi3"
]
